# Shzip

./: pyproject.toml
src/shzip/: __init__.py  shzip.py
tests/: test_shzip.py
